{
    "name": "InputSystem_Actions",
    "maps": [
        {
            "name": "Player",
            "id": "a1b2c3d4-e5f6-7890-abcd-ef1234567890",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b2c3d4e5-f6a7-8901-bcde-f12345678901",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "bindings": [
                        {
                            "name": "WASD",
                            "id": "c3d4e5f6-a7b8-9012-cdef-123456789012",
                            "path": "2DVector",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Move",
                            "isComposite": true,
                            "isPartOfComposite": false
                        },
                        {
                            "name": "up",
                            "id": "d4e5f6a7-b8c9-0123-def0-234567890123",
                            "path": "<Keyboard>/w",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Move",
                            "isComposite": false,
                            "isPartOfComposite": true
                        },
                        {
                            "name": "down",
                            "id": "e5f6a7b8-c9d0-1234-ef01-345678901234",
                            "path": "<Keyboard>/s",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Move",
                            "isComposite": false,
                            "isPartOfComposite": true
                        },
                        {
                            "name": "left",
                            "id": "f6a7b8c9-d0e1-2345-f012-456789012345",
                            "path": "<Keyboard>/a",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Move",
                            "isComposite": false,
                            "isPartOfComposite": true
                        },
                        {
                            "name": "right",
                            "id": "a7b8c9d0-e1f2-3456-0123-567890123456",
                            "path": "<Keyboard>/d",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Move",
                            "isComposite": false,
                            "isPartOfComposite": true
                        },
                        {
                            "name": "Arrow Keys",
                            "id": "b8c9d0e1-f2a3-4567-1234-678901234567",
                            "path": "2DVector",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Move",
                            "isComposite": true,
                            "isPartOfComposite": false
                        },
                        {
                            "name": "up",
                            "id": "c9d0e1f2-a3b4-5678-2345-789012345678",
                            "path": "<Keyboard>/upArrow",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Move",
                            "isComposite": false,
                            "isPartOfComposite": true
                        },
                        {
                            "name": "down",
                            "id": "d0e1f2a3-b4c5-6789-3456-890123456789",
                            "path": "<Keyboard>/downArrow",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Move",
                            "isComposite": false,
                            "isPartOfComposite": true
                        },
                        {
                            "name": "left",
                            "id": "e1f2a3b4-c5d6-7890-4567-901234567890",
                            "path": "<Keyboard>/leftArrow",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Move",
                            "isComposite": false,
                            "isPartOfComposite": true
                        },
                        {
                            "name": "right",
                            "id": "f2a3b4c5-d6e7-8901-5678-012345678901",
                            "path": "<Keyboard>/rightArrow",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Move",
                            "isComposite": false,
                            "isPartOfComposite": true
                        },
                        {
                            "name": "Gamepad",
                            "id": "a3b4c5d6-e7f8-9012-6789-123456789012",
                            "path": "<Gamepad>/leftStick",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Move",
                            "isComposite": false,
                            "isPartOfComposite": false
                        }
                    ]
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "b4c5d6e7-f8a9-0123-7890-234567890123",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "bindings": [
                        {
                            "name": "",
                            "id": "c5d6e7f8-a9b0-1234-8901-345678901234",
                            "path": "<Keyboard>/leftShift",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Sprint",
                            "isComposite": false,
                            "isPartOfComposite": false
                        },
                        {
                            "name": "",
                            "id": "d6e7f8a9-b0c1-2345-9012-456789012345",
                            "path": "<Gamepad>/leftShoulder",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Sprint",
                            "isComposite": false,
                            "isPartOfComposite": false
                        }
                    ]
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "e7f8a9b0-c1d2-3456-0123-567890123456",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "bindings": [
                        {
                            "name": "",
                            "id": "f8a9b0c1-d2e3-4567-1234-678901234567",
                            "path": "<Keyboard>/space",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Attack",
                            "isComposite": false,
                            "isPartOfComposite": false
                        },
                        {
                            "name": "",
                            "id": "a9b0c1d2-e3f4-5678-2345-789012345678",
                            "path": "<Gamepad>/buttonSouth",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Attack",
                            "isComposite": false,
                            "isPartOfComposite": false
                        }
                    ]
                },
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "b0c1d2e3-f4a5-6789-3456-890123456789",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "bindings": [
                        {
                            "name": "",
                            "id": "c1d2e3f4-a5b6-7890-4567-901234567890",
                            "path": "<Keyboard>/1",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Skill1",
                            "isComposite": false,
                            "isPartOfComposite": false
                        },
                        {
                            "name": "",
                            "id": "d2e3f4a5-b6c7-8901-5678-012345678901",
                            "path": "<Gamepad>/buttonNorth",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Skill1",
                            "isComposite": false,
                            "isPartOfComposite": false
                        }
                    ]
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "e3f4a5b6-c7d8-9012-6789-123456789012",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "bindings": [
                        {
                            "name": "",
                            "id": "f4a5b6c7-d8e9-0123-7890-234567890123",
                            "path": "<Keyboard>/2",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Skill2",
                            "isComposite": false,
                            "isPartOfComposite": false
                        },
                        {
                            "name": "",
                            "id": "a5b6c7d8-e9f0-1234-8901-345678901234",
                            "path": "<Gamepad>/buttonEast",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Skill2",
                            "isComposite": false,
                            "isPartOfComposite": false
                        }
                    ]
                },
                {
                    "name": "Skill3",
                    "type": "Button",
                    "id": "b6c7d8e9-f0a1-2345-9012-456789012345",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "bindings": [
                        {
                            "name": "",
                            "id": "c7d8e9f0-a1b2-3456-0123-567890123456",
                            "path": "<Keyboard>/3",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Skill3",
                            "isComposite": false,
                            "isPartOfComposite": false
                        },
                        {
                            "name": "",
                            "id": "d8e9f0a1-b2c3-4567-1234-678901234567",
                            "path": "<Gamepad>/rightShoulder",
                            "interactions": "",
                            "processors": "",
                            "groups": "",
                            "action": "Skill3",
                            "isComposite": false,
                            "isPartOfComposite": false
                        }
                    ]
                }
            ],
            "bindings": []
        }
    ],
    "controlSchemes": []
}
